--- a/echo-control/styles/base/index.css
+++ b/echo-control/styles/base/index.css
@@ -1,14 +1,15 @@
 @import "./fonts.css"; /* Use relative path instead of @/ alias */
+@import "../components/animations.css"; /* Custom animations */
 
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-@layer base {
-  html {
-    @apply font-sans;
-  }
+html {
+  @apply font-sans;
+}
 
+@layer base {
   :root {
     /* light mode color gradients, lightest to darkest */
     /* 
@@ -19,10 +20,11 @@
     140 140 140 
     */
 
-    --background: 255 255 255;
+    --background: 250, 250, 250;
     --background-gradient: 255 255 255;
+    --navbar: 255 255 255;
     --foreground: 14 14 14;
-    --card: 250 250 248;
+    --card: 255 255 255;
     --card-foreground: 14 14 14;
     --popover: 250 250 248;
     --popover-foreground: 14 14 14;
@@ -118,11 +120,14 @@
   }
 
   .dark {
-    --background: 23 23 23;
+    /* --background: 18 18 18; */
+    --background: 0 0 0;
     --background-gradient: 0 0 0;
     --foreground: 223 226 217;
 
-    --card: 33 33 33;
+    --navbar: 18 18 18;
+
+    --card: 10 10 10;
     --card-foreground: 241 242 237;
 
     --popover: 28 28 30;
@@ -133,7 +138,7 @@
     --secondary: 1 153 174;
     --secondary-foreground: 222 226 211;
 
-    --muted: 14 14 14;
+    --muted: 28 28 28;
     --muted-foreground: 200 200 200;
 
     --accent: 128 102 111;
