--- a/echo-control/styles/base/index.css
+++ b/echo-control/styles/base/index.css
@@ -1,8 +1,6 @@
-@import './fonts.css' layer(base); /* Use relative path instead of @/ alias */
-
 @import 'tailwindcss';
 
-@config '../../tailwind.config.js';
+@import './fonts.css' layer(base); /* Use relative path instead of @/ alias */
 
 /*
   The default border color has changed to `currentcolor` in Tailwind CSS v4,
@@ -46,230 +44,163 @@
   }
 }
 
-@layer base {
-  :root {
-    /* light mode color gradients, lightest to darkest */
-    /* 
-    255 255 255
-    241 242 237
-    223 226 217
-    177 178 175
-    140 140 140 
-    */
+:root {
+  --background: oklch(0.99 0 0);
+  --foreground: oklch(0 0 0);
+  --card: oklch(1 0 0);
+  --card-foreground: oklch(0 0 0);
+  --popover: oklch(0.99 0 0);
+  --popover-foreground: oklch(0 0 0);
+  --primary: oklch(0.6483 0.124 226.05);
+  --primary-foreground: oklch(0.9531 0.0136 120.28);
+  --secondary: oklch(0.94 0 0);
+  --secondary-foreground: oklch(0 0 0);
+  --muted: oklch(0.97 0 0);
+  --muted-foreground: oklch(0.44 0 0);
+  --accent: oklch(0.94 0 0);
+  --accent-foreground: oklch(0 0 0);
+  --destructive: oklch(0.63 0.19 23.03);
+  --destructive-foreground: oklch(1 0 0);
+  --border: oklch(0.92 0 0);
+  --input: oklch(0.94 0 0);
+  --ring: oklch(0 0 0);
+  --chart-1: oklch(0.81 0.17 75.35);
+  --chart-2: oklch(0.55 0.22 264.53);
+  --chart-3: oklch(0.72 0 0);
+  --chart-4: oklch(0.92 0 0);
+  --chart-5: oklch(0.56 0 0);
+  --sidebar: oklch(0.99 0 0);
+  --sidebar-foreground: oklch(0 0 0);
+  --sidebar-primary: oklch(0 0 0);
+  --sidebar-primary-foreground: oklch(1 0 0);
+  --sidebar-accent: oklch(0.94 0 0);
+  --sidebar-accent-foreground: oklch(0 0 0);
+  --sidebar-border: oklch(0.94 0 0);
+  --sidebar-ring: oklch(0 0 0);
+  --font-sans: Geist, sans-serif;
+  --font-serif: Georgia, serif;
+  --font-mono: Geist Mono, monospace;
+  --radius: 0.5rem;
+  --shadow-2xs: 0px 1px 2px 0px hsl(0 0% 0% / 0.09);
+  --shadow-xs: 0px 1px 2px 0px hsl(0 0% 0% / 0.09);
+  --shadow-sm:
+    0px 1px 2px 0px hsl(0 0% 0% / 0.18), 0px 1px 2px -1px hsl(0 0% 0% / 0.18);
+  --shadow:
+    0px 1px 2px 0px hsl(0 0% 0% / 0.18), 0px 1px 2px -1px hsl(0 0% 0% / 0.18);
+  --shadow-md:
+    0px 1px 2px 0px hsl(0 0% 0% / 0.18), 0px 2px 4px -1px hsl(0 0% 0% / 0.18);
+  --shadow-lg:
+    0px 1px 2px 0px hsl(0 0% 0% / 0.18), 0px 4px 6px -1px hsl(0 0% 0% / 0.18);
+  --shadow-xl:
+    0px 1px 2px 0px hsl(0 0% 0% / 0.18), 0px 8px 10px -1px hsl(0 0% 0% / 0.18);
+  --shadow-2xl: 0px 1px 2px 0px hsl(0 0% 0% / 0.45);
+  --tracking-normal: 0em;
+  --spacing: 0.25rem;
+}
 
-    --background: 250, 250, 250;
-    --background-gradient: 255 255 255;
-    --navbar: 255 255 255;
-    --foreground: 14 14 14;
-    --card: 255 255 255;
-    --card-foreground: 14 14 14;
-    --popover: 250 250 248;
-    --popover-foreground: 14 14 14;
-    --muted: 223 226 217;
-    --muted-foreground: 14 14 14;
+.dark {
+  --background: oklch(0 0 0);
+  --foreground: oklch(1 0 0);
+  --card: oklch(0.14 0 0);
+  --card-foreground: oklch(1 0 0);
+  --popover: oklch(0.18 0 0);
+  --popover-foreground: oklch(1 0 0);
+  --primary: oklch(0.6293 0.109 210.87);
+  --primary-foreground: oklch(0.9056 0.0205 118.96);
+  --secondary: oklch(0.25 0 0);
+  --secondary-foreground: oklch(1 0 0);
+  --muted: oklch(0.23 0 0);
+  --muted-foreground: oklch(0.72 0 0);
+  --accent: oklch(0.32 0 0);
+  --accent-foreground: oklch(1 0 0);
+  --destructive: oklch(0.69 0.2 23.91);
+  --destructive-foreground: oklch(0 0 0);
+  --border: oklch(0.26 0 0);
+  --input: oklch(0.32 0 0);
+  --ring: oklch(0.72 0 0);
+  --chart-1: oklch(0.81 0.17 75.35);
+  --chart-2: oklch(0.58 0.21 260.84);
+  --chart-3: oklch(0.56 0 0);
+  --chart-4: oklch(0.44 0 0);
+  --chart-5: oklch(0.92 0 0);
+  --sidebar: oklch(0.18 0 0);
+  --sidebar-foreground: oklch(1 0 0);
+  --sidebar-primary: oklch(1 0 0);
+  --sidebar-primary-foreground: oklch(0 0 0);
+  --sidebar-accent: oklch(0.32 0 0);
+  --sidebar-accent-foreground: oklch(1 0 0);
+  --sidebar-border: oklch(0.32 0 0);
+  --sidebar-ring: oklch(0.72 0 0);
+  --font-sans: 'HelveticaNowDisplay', sans-serif;
+  --font-serif: 'HelveticaNowDisplay', serif;
+  --font-mono: Geist Mono, monospace;
+  --radius: 0.5rem;
+  --shadow-2xs: 0px 1px 2px 0px hsl(0 0% 0% / 0.09);
+  --shadow-xs: 0px 1px 2px 0px hsl(0 0% 0% / 0.09);
+  --shadow-sm:
+    0px 1px 2px 0px hsl(0 0% 0% / 0.18), 0px 1px 2px -1px hsl(0 0% 0% / 0.18);
+  --shadow:
+    0px 1px 2px 0px hsl(0 0% 0% / 0.18), 0px 1px 2px -1px hsl(0 0% 0% / 0.18);
+  --shadow-md:
+    0px 1px 2px 0px hsl(0 0% 0% / 0.18), 0px 2px 4px -1px hsl(0 0% 0% / 0.18);
+  --shadow-lg:
+    0px 1px 2px 0px hsl(0 0% 0% / 0.18), 0px 4px 6px -1px hsl(0 0% 0% / 0.18);
+  --shadow-xl:
+    0px 1px 2px 0px hsl(0 0% 0% / 0.18), 0px 8px 10px -1px hsl(0 0% 0% / 0.18);
+  --shadow-2xl: 0px 1px 2px 0px hsl(0 0% 0% / 0.45);
+}
 
-    --accent: 128 102 111;
-    --accent-foreground: 222 226 211;
-    --destructive: 255 59 48;
-    --destructive-foreground: 238 240 232;
-    --primary: 205 27 33;
-    --primary-foreground: 238 241 231;
-    --secondary: 0 157 200;
-    --secondary-foreground: 222 226 211;
+@theme inline {
+  --color-background: var(--background);
+  --color-foreground: var(--foreground);
+  --color-card: var(--card);
+  --color-card-foreground: var(--card-foreground);
+  --color-popover: var(--popover);
+  --color-popover-foreground: var(--popover-foreground);
+  --color-primary: var(--primary);
+  --color-primary-foreground: var(--primary-foreground);
+  --color-secondary: var(--secondary);
+  --color-secondary-foreground: var(--secondary-foreground);
+  --color-muted: var(--muted);
+  --color-muted-foreground: var(--muted-foreground);
+  --color-accent: var(--accent);
+  --color-accent-foreground: var(--accent-foreground);
+  --color-destructive: var(--destructive);
+  --color-destructive-foreground: var(--destructive-foreground);
+  --color-border: var(--border);
+  --color-input: var(--input);
+  --color-ring: var(--ring);
+  --color-chart-1: var(--chart-1);
+  --color-chart-2: var(--chart-2);
+  --color-chart-3: var(--chart-3);
+  --color-chart-4: var(--chart-4);
+  --color-chart-5: var(--chart-5);
+  --color-sidebar: var(--sidebar);
+  --color-sidebar-foreground: var(--sidebar-foreground);
+  --color-sidebar-primary: var(--sidebar-primary);
+  --color-sidebar-primary-foreground: var(--sidebar-primary-foreground);
+  --color-sidebar-accent: var(--sidebar-accent);
+  --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
+  --color-sidebar-border: var(--sidebar-border);
+  --color-sidebar-ring: var(--sidebar-ring);
 
-    --border: 223 226 217;
-    --input: 255 255 255;
-    --input-foreground: 14 14 14;
+  --font-sans: var(--font-sans);
+  --font-mono: var(--font-mono);
+  --font-serif: var(--font-serif);
 
-    --ring: 111 153 174;
+  --radius-sm: calc(var(--radius) - 4px);
+  --radius-md: calc(var(--radius) - 2px);
+  --radius-lg: var(--radius);
+  --radius-xl: calc(var(--radius) + 4px);
 
-    --sidebar-background: 245 245 245;
-    --sidebar-foreground: 67 67 67;
-    --sidebar-primary: 26 26 26;
-    --sidebar-primary-foreground: 250 250 248;
-    --sidebar-accent: 245 245 245;
-    --sidebar-accent-foreground: 26 26 26;
-    --sidebar-border: 232 232 232;
-    --sidebar-ring: 66 153 225;
-
-    --chart-1: var(--primary); /* Primary color */
-    --chart-2: var(--secondary); /* Secondary color */
-    --chart-3: var(--accent); /* Accent color */
-    --chart-4: 255 204 0;
-    --chart-5: 255 149 0;
-
-    --face-border: 0 0 0;
-    --face-color: 250 250 248;
-
-    /* red */
-    /* --inner-front: 205 2 2;
-    --inner-top: 175 4 4;
-    --inner-right: 127 4 4; */
-
-    /* blue */
-    --inner-front: 1 153 174;
-    --inner-top: 1 111 119;
-    --inner-right: 2 79 81;
-
-    --diff-selection-background-color: rgb(180, 201, 185);
-    --diff-gutter-insert-background-color: rgb(192, 230, 193);
-    --diff-gutter-delete-background-color: rgb(232, 180, 184);
-    --diff-gutter-selected-background-color: rgb(168, 185, 175);
-    --diff-code-insert-background-color: rgb(185, 215, 188);
-    --diff-code-delete-background-color: rgb(217, 178, 183);
-    --diff-code-insert-edit-background-color: rgb(205, 224, 205);
-    --diff-code-delete-edit-background-color: rgb(227, 193, 197);
-    --diff-code-selected-background-color: rgb(186, 203, 191);
-    --diff-omit-gutter-line-color: rgb(217, 140, 145);
-
-    --diff-text-color: rgb(var(--foreground));
-    --diff-background-color: var(--card);
-    --diff-font-family: Consolas, Courier, monospace;
-    --diff-selection-text-color: var(--diff-text-color);
-    --diff-gutter-insert-text-color: var(--diff-text-color);
-    --diff-gutter-delete-text-color: var(--diff-text-color);
-    --diff-gutter-selected-text-color: var(--diff-text-color);
-    --diff-code-insert-text-color: var(--diff-text-color);
-    --diff-code-delete-text-color: var(--diff-text-color);
-    --diff-code-insert-edit-text-color: var(--diff-text-color);
-    --diff-code-delete-edit-text-color: var(--diff-text-color);
-    --diff-code-selected-text-color: var(--diff-text-color);
-
-    --radius: 0.5rem;
-
-    --brand-xlight-gray: 76 76 76;
-    --brand-light-gray: 51 51 51;
-    --brand-gray: 35 35 35;
-    --brand-dark-gray: 20 20 20;
-    --brand-xdark-gray: 0 0 0;
-
-    --brand-xlight-blue: 5 199 204;
-    --brand-light-blue: 2 178 191;
-    --brand-blue: 1 153 174;
-    --brand-dark-blue: 1 111 119;
-    --brand-xdark-blue: 2 79 81;
-
-    --brand-xlight-white: 255 255 255;
-    --brand-light-white: 241 242 237;
-    --brand-white: 223 226 217;
-    --brand-dark-white: 177 178 175;
-    --brand-xdark-white: 140 140 140;
-  }
-
-  .dark {
-    /* --background: 18 18 18; */
-    --background: 0 0 0;
-    --background-gradient: 0 0 0;
-    --foreground: 223 226 217;
-
-    --navbar: 18 18 18;
-
-    --card: 10 10 10;
-    --card-foreground: 241 242 237;
-
-    --popover: 28 28 30;
-    --popover-foreground: 242 242 242;
-    --primary: 205 27 33;
-    --primary-foreground: 238 241 231;
-
-    --secondary: 1 153 174;
-    --secondary-foreground: 222 226 211;
-
-    --muted: 28 28 28;
-    --muted-foreground: 200 200 200;
-
-    --accent: 128 102 111;
-    --accent-foreground: 222 226 211;
-
-    --destructive: 205 27 33;
-    --destructive-foreground: 238 241 231;
-
-    --border: 64 64 64;
-
-    --input: 42 42 42;
-    --ring: 111 153 174;
-
-    --face-border: 255 255 255;
-    --face-color: 0 0 0;
-
-    /* red */
-    --inner-front: 205 2 2;
-    --inner-top: 175 4 4;
-    --inner-right: 127 4 4;
-
-    --sidebar-background: 33 33 33;
-    --sidebar-foreground: 244 244 244;
-    --sidebar-primary: 41 121 255;
-    --sidebar-primary-foreground: 255 255 255;
-    --sidebar-accent: 41 41 41;
-    --sidebar-accent-foreground: 244 244 244;
-    --sidebar-border: 41 41 41;
-    --sidebar-ring: 66 153 255;
-
-    /* blue */
-    /* --inner-front: 1 153 174;
-    --inner-top: 1 111 119;
-    --inner-right: 2 79 81; */
-
-    --chart-1: var(--primary); /* Primary color */
-    --chart-2: var(--secondary); /* Secondary color */
-    --chart-3: var(--accent); /* Accent color */
-    --chart-4: 255 182 193; /* Light Pink */
-    --chart-5: 123 104 238; /* Medium Slate Blue */
-
-    --diff-selection-background-color: rgb(59, 83, 100);
-    --diff-gutter-insert-background-color: rgb(61, 114, 71);
-    --diff-gutter-delete-background-color: rgb(122, 62, 72);
-    --diff-gutter-selected-background-color: rgb(78, 86, 96);
-    --diff-code-insert-background-color: rgb(70, 109, 80);
-    --diff-code-delete-background-color: rgb(128, 74, 84);
-    --diff-code-insert-edit-background-color: rgb(90, 138, 103);
-    --diff-code-delete-edit-background-color: rgb(167, 91, 103);
-    --diff-code-selected-background-color: rgb(92, 102, 114);
-    --diff-omit-gutter-line-color: rgb(167, 67, 60);
-
-    --diff-text-color: rgb(var(--foreground));
-    --diff-background-color: var(--card);
-    --diff-font-family: Consolas, Courier, monospace;
-    --diff-selection-text-color: var(--diff-text-color);
-    --diff-gutter-insert-text-color: var(--diff-text-color);
-    --diff-gutter-delete-text-color: var(--diff-text-color);
-    --diff-gutter-selected-text-color: var(--diff-text-color);
-    --diff-code-insert-text-color: var(--diff-text-color);
-    --diff-code-delete-text-color: var(--diff-text-color);
-    --diff-code-insert-edit-text-color: var(--diff-text-color);
-    --diff-code-delete-edit-text-color: var(--diff-text-color);
-    --diff-code-selected-text-color: var(--diff-text-color);
-    --radius: 0.5rem;
-
-    /* Scrollbar styles for dark mode */
-    --scrollbar-track: 42 42 42;
-    --scrollbar-thumb: 75 75 75;
-    --scrollbar-thumb-hover: 90 90 90;
-
-    /* Custom scrollbar */
-    &::-webkit-scrollbar {
-      width: 10px;
-      height: 10px;
-    }
-
-    &::-webkit-scrollbar-track {
-      background: rgb(var(--scrollbar-track));
-    }
-
-    &::-webkit-scrollbar-thumb {
-      background: rgb(var(--scrollbar-thumb));
-      border-radius: 5px;
-    }
-
-    &::-webkit-scrollbar-thumb:hover {
-      background: rgb(var(--scrollbar-thumb-hover));
-    }
-
-    /* Firefox */
-    scrollbar-color: rgb(var(--scrollbar-thumb)) rgb(var(--scrollbar-track));
-    scrollbar-width: thin;
-  }
+  --shadow-2xs: var(--shadow-2xs);
+  --shadow-xs: var(--shadow-xs);
+  --shadow-sm: var(--shadow-sm);
+  --shadow: var(--shadow);
+  --shadow-md: var(--shadow-md);
+  --shadow-lg: var(--shadow-lg);
+  --shadow-xl: var(--shadow-xl);
+  --shadow-2xl: var(--shadow-2xl);
 }
 
 @layer base {
@@ -312,17 +243,6 @@
       transform: scale(1);
       opacity: 1;
     }
-  }
-}
-
-@layer components {
-  #gradient-canvas,
-  [id^='gradient-canvas-button-'] {
-    width: 100%;
-    height: 100%;
-    --gradient-color-1: #cd0202;
-    --gradient-color-2: #232323;
-    /* --gradient-color-3: #0199ae; */
   }
 }
 
