--- a/echo-control/src/styles/globals.css
+++ b/echo-control/src/styles/globals.css
@@ -80,8 +80,8 @@
   --sidebar-accent-foreground: oklch(0 0 0);
   --sidebar-border: oklch(0.94 0 0);
   --sidebar-ring: oklch(0 0 0);
-  --font-sans: Geist, sans-serif;
-  --font-serif: Georgia, serif;
+  --font-sans: 'HelveticaNowDisplay', sans-serif;
+  --font-serif: 'HelveticaNowDisplay', serif;
   --font-mono: Geist Mono, monospace;
   --radius: 0.5rem;
   --shadow-2xs: 0px 1px 2px 0px hsl(0 0% 0% / 0.09);
